# QCereal

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  KSerial.pro  QCereal.pro  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  console.cpp  console.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  serial.cpp  serial.h  serialsetup.cpp  serialsetup.h  serialsetup.ui
